<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        app:title="@string/newadd"
        app:titleTextColor="@color/colorWhite"/>

    <ScrollView
        android:layout_above="@+id/llend"
        android:layout_below="@+id/toolbar_create"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtname"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edtmbl"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/mobile_no"
                android:maxLength="10"
                android:inputType="number"
                android:layout_below="@id/edtname"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edtemail"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/edtmbl"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edtgst"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/edtemail"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edittext_background"
                android:hint="@string/GstNo"
                android:padding="10dp" />


            <EditText
                android:id="@+id/edtFlat"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/edtgst"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edittext_background"
                android:hint="@string/flat"
                android:inputType="textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edtBuilding"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/building"
                android:inputType="textCapWords"
                android:layout_below="@id/edtFlat"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edtlandmark"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/landmark"
                android:inputType="textCapWords"
                android:layout_below="@id/edtBuilding"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edtcity"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:layout_below="@+id/edtlandmark"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>

            <Spinner
                android:id="@+id/spinner_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/edtcity"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edittext_background" />

            <EditText
                android:id="@+id/edtpincode"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="10dp"
                android:hint="@string/pincode"
                android:maxLength="6"
                android:inputType="textCapWords"
                android:layout_below="@+id/spinner_area"
                android:background="@drawable/login_edittext_background"
                android:padding="10dp"/>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtpincode"
                android:gravity="center"
                android:id="@+id/ll"
                android:paddingBottom="10dp">

<!--                <TextView-->
<!--                    android:id="@+id/txthome"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:background="@drawable/rounded_gray_border_btn"-->
<!--                    android:gravity="center"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/home"-->
<!--                    android:textSize="16sp" />-->

                <TextView
                    android:id="@+id/txtoffice"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_gray_border_btn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/office"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtothers"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_gray_border_btn"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/others"
                    android:textSize="16sp" />
            </LinearLayout>


            <EditText
            android:id="@+id/edtBillingAdd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="10dp"
            android:hint="Billing Address (optional)"
            android:layout_below="@+id/ll"
            android:background="@drawable/login_edittext_background"
            android:padding="10dp"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <TextView
            android:drawableStart="@drawable/offline_bolt_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:layout_margin="5dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>