<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:alpha="0.1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_layout"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/aaijee"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorBlack"
            android:text="@string/loginwithemail"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/tvusername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/mobileno"
            android:inputType="number"
            android:maxLength="10"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_user"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"/>

        <EditText
            android:id="@+id/tvpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_password"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/login_button"
            android:backgroundTint="@color/colorAccent"/>

        <TextView
            android:id="@+id/tvForgotPwd"
            android:layout_above="@id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/_16ssp"
            android:text="@string/forgot_pwd"/>

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotomenu"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="@color/colorRed"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/dont_have_account"
            android:layout_alignParentBottom="true"/>


    </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/tvOtp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="numberDecimal"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_password"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:backgroundTint="@color/colorAccent"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="visible"/>

</RelativeLayout>