<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrey">

    <RelativeLayout
        android:id="@+id/toollay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:textStyle="bold"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/toollay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_us_background"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/textView_name_contactUS_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#00000000"
                        android:hint="@string/contactUs_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorGreyDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_us_background"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/textView_email_contactUS_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#00000000"
                        android:hint="@string/contactUs_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorGreyDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_us_background"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/textView_phoneNo_contactUS_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#00000000"
                        android:hint="@string/contactUs_phoneNo"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@color/colorGreyDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_us_background">

                    <EditText
                        android:id="@+id/textView_subject_contactUS_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#00000000"
                        android:hint="@string/contactUs_subject"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorGreyDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_us_background">

                    <EditText
                        android:id="@+id/textView_description_contactUS_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#00000000"
                        android:gravity="top"
                        android:hint="@string/contactUs_description"
                        android:maxLines="5"
                        android:minLines="5"
                        android:textColor="@color/colorGreyDark" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_contactus_fragment"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/login_button"
                    android:backgroundTint="@color/colorRedLight"
                    android:text="@string/Button_Submit_ContactUs"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>